--- a/app/src/main/res/layout/fragment_home_buyer.xml
+++ b/app/src/main/res/layout/fragment_home_buyer.xml
@@ -101,7 +101,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="WTF IS THIS"
+            android:text="AI Assistant"
             android:textColor="@android:color/black"
             android:padding="10dp"
             android:textSize="16sp"
