--- a/app/src/main/res/layout/activity_local_shop_details.xml
+++ b/app/src/main/res/layout/activity_local_shop_details.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/background_light"
     android:orientation="vertical">
 
     <!-- Toolbar with Back Button -->
@@ -10,10 +11,11 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/white"
-        app:navigationIcon="@drawable/ic_back"
-        app:titleTextColor="@android:color/black"
-        app:title="           Local Shop Details" />
+        android:background="@android:color/holo_blue_light"
+        app:title="Local Shop Details"
+        app:titleTextColor="@android:color/white"
+        app:navigationIcon="@drawable/ic_back_white"
+        android:elevation="4dp" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -70,7 +72,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Time Schedule:"
+                    android:text="Time Schedule: "
                     android:textStyle="bold"
                     android:textSize="16sp" />
 
