--- a/app/src/main/res/layout/fragment_trends_seller.xml
+++ b/app/src/main/res/layout/fragment_trends_seller.xml
@@ -1,7 +1,46 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:fitsSystemWindows="true"
     android:orientation="vertical">
+
+    <LinearLayout
+        android:id="@+id/top"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:gravity="center_vertical"
+        android:background="@android:color/holo_blue_light"
+        tools:ignore="MissingConstraints">
+
+        <!-- Back Button -->
+        <ImageView
+            android:id="@+id/btn_back"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:src="@drawable/ic_back_white"
+            android:contentDescription="Back"
+            android:layout_marginEnd="10dp"
+            android:background="?android:attr/selectableItemBackground"
+            android:padding="12dp"/>
+
+        <!-- Search EditText -->
+        <EditText
+            android:id="@+id/et_search"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:drawableStart="@drawable/search"
+            android:hint="Search Products"
+            android:inputType="text"
+            android:drawablePadding="8dp"
+            android:padding="8dp"
+            android:layout_marginTop="2dp"
+            android:background="@drawable/search_bar_background"
+            android:textSize="14sp"/>
+    </LinearLayout>
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
