--- a/app/src/main/res/layout/activity_checkout_form.xml
+++ b/app/src/main/res/layout/activity_checkout_form.xml
@@ -69,6 +69,7 @@
             </LinearLayout>
         </LinearLayout>
 
+
         <!-- Brand and Year Model (Newly added) -->
         <LinearLayout
             android:layout_width="match_parent"
@@ -91,6 +92,7 @@
                 android:textColor="@color/black" />
         </LinearLayout>
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -112,6 +114,12 @@
                 android:textColor="@color/black" />
         </LinearLayout>
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"/>
 
     <!-- Scrollable Checkout Form -->
     <androidx.core.widget.NestedScrollView
