--- a/app/src/main/res/layout/fragment_socialmedia_trends.xml
+++ b/app/src/main/res/layout/fragment_socialmedia_trends.xml
@@ -1,6 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <!-- BarChart for Search Queries -->
+    <com.github.mikephil.charting.charts.BarChart
+        android:id="@+id/searchQueryChart"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.33" />
+
+    <!-- BarChart for Product Mentions -->
+    <com.github.mikephil.charting.charts.BarChart
+        android:id="@+id/productMentionChart"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/searchQueryChart"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.33" />
+
+    <!-- BarChart for Hashtags -->
+    <com.github.mikephil.charting.charts.BarChart
+        android:id="@+id/hashtagChart"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/productMentionChart"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.33" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
