--- a/app/src/main/res/layout/item_manage_order.xml
+++ b/app/src/main/res/layout/item_manage_order.xml
@@ -1,69 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="8dp">
+    android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <!-- Product Image -->
+    <ImageView
+        android:id="@+id/product_image"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:scaleType="centerCrop"/>
+
+    <!-- Product Name -->
+    <TextView
+        android:id="@+id/product_name"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:text="Product Name"
+        android:textSize="16sp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toEndOf="@id/product_image"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/product_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Product Name"
-            android:textSize="18sp"/>
+    <!-- Quantity -->
+    <TextView
+        android:id="@+id/product_quantity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Quantity"
+        app:layout_constraintTop_toBottomOf="@id/product_name"
+        app:layout_constraintStart_toStartOf="@id/product_name"/>
 
-        <TextView
-            android:id="@+id/product_quantity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Quantity"
-            android:textSize="16sp"/>
+    <!-- Total Price -->
+    <TextView
+        android:id="@+id/product_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Total Price"
+        app:layout_constraintTop_toBottomOf="@id/product_quantity"
+        app:layout_constraintStart_toStartOf="@id/product_name"/>
 
-        <TextView
-            android:id="@+id/product_price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Price"
-            android:textSize="16sp"/>
+    <!-- Customer Name -->
+    <TextView
+        android:id="@+id/customer_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Customer"
+        app:layout_constraintTop_toBottomOf="@id/product_price"
+        app:layout_constraintStart_toStartOf="@id/product_name"/>
 
-        <TextView
-            android:id="@+id/customer_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Customer Name"
-            android:textSize="16sp"/>
+    <!-- Shipping Address -->
+    <TextView
+        android:id="@+id/customer_address"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Address"
+        app:layout_constraintTop_toBottomOf="@id/customer_name"
+        app:layout_constraintStart_toStartOf="@id/product_name"/>
 
-        <TextView
-            android:id="@+id/customer_address"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Customer Address"
-            android:textSize="16sp"/>
+    <!-- Payment Method -->
+    <TextView
+        android:id="@+id/payment_method"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Payment"
+        app:layout_constraintTop_toBottomOf="@id/customer_address"
+        app:layout_constraintStart_toStartOf="@id/product_name"/>
 
-        <TextView
-            android:id="@+id/payment_method"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Payment Method"
-            android:textSize="16sp"/>
+    <!-- Order Status -->
+    <TextView
+        android:id="@+id/order_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Status"
+        app:layout_constraintTop_toBottomOf="@id/payment_method"
+        app:layout_constraintStart_toStartOf="@id/product_name"/>
 
-        <TextView
-            android:id="@+id/order_status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Order Status"
-            android:textSize="16sp"/>
-
-        <Button
-            android:id="@+id/update_status_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Update Status"/>
-
-    </LinearLayout>
-</androidx.cardview.widget.CardView>
+    <!-- Status Update Button -->
+    <Button
+        android:id="@+id/update_status_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Update Status"
+        app:layout_constraintTop_toBottomOf="@id/order_status"
+        app:layout_constraintStart_toStartOf="@id/product_name"
+        android:layout_marginTop="8dp"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
