--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -110,19 +110,29 @@
             android:paddingStart="5dp"
             android:layout_marginTop="5dp"/>
 
-        <EditText
-            android:id="@+id/expiry_date"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="MM / YY"
-            android:inputType="number" />
+            android:orientation="horizontal"
+            android:layout_marginTop="5dp">
 
-        <EditText
-            android:id="@+id/cvv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="CVC"
-            android:inputType="number" />
+            <EditText
+                android:id="@+id/expiry_date"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:hint="MM / YY"
+                android:inputType="number" />
+
+            <EditText
+                android:id="@+id/cvv"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:hint="CVC"
+                android:inputType="number"
+                android:drawableEnd="@drawable/lock" />
+        </LinearLayout>
 
         <Button
             android:id="@+id/confirm_payment"
